--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,10 +17,14 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
         files: \.(py|sh|rst|yml|yaml)$
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.20.1
+  # - repo: https://github.com/asottile/setup-cfg-fmt
+  #   rev: v1.20.1
+  #   hooks:
+  #     - id: setup-cfg-fmt
+  - repo: https://gitlab.com/smop/pre-commit-hooks
+    rev: v1.0.0
     hooks:
-      - id: setup-cfg-fmt
+      - id: check-poetry
   - repo: https://github.com/asottile/pyupgrade
     rev: v2.32.1
     hooks:
