--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,10 @@ python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.16.0"
+isort = "^5.10.1"
+black = "^22.3.0"
+mypy = "^0.950"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
