--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,9 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
+        entry: pflake8
+        additional_dependencies:
+          - pyproject-flake8
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.950
     hooks:
