--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ isort = "^5.10.1"
 black = "^22.3.0"
 mypy = "^0.950"
 flake8 = "^4.0.1"
+pyproject-flake8 = "^0.0.1-alpha.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -49,3 +50,9 @@ strict = true
 
 [tool.black]
 line-length = 88
+
+[tool.flake8]
+indent-size = 4
+max-line-length = 120
+extend-ignore = "W605,"
+
