--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ mypy = "^0.971"
 flake8 = "^5.0.0"
 flake8-pyproject = "^1.1.0"
 pre-commit = "^2.20.0"
+pytest = "^7.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
