--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,14 +11,14 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+      - name: Install poetry
+        run: pip install poetry
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
           cache: poetry
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
       - name: Install dependencies
         run: poetry install --no-interaction
       - name: Run lint
