--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
       - name: Install poetry
-        run: pip install poetry
+        run: pip install poetry==1.1.15
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v4
