--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,17 +26,17 @@ longpython = "longpython.main:main"
 [tool.poetry.dependencies]
 python = "^3.9"
 
-[tool.poetry.dev-dependencies]
-black = "^22.8.0"
-isort = "^5.10.0"
-mypy = "^0.971"
-flake8 = "^5.0.0"
-flake8-pyproject = "^1.1.0"
-pre-commit = "^2.20.0"
-pytest = "^7.1.0"
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+isort = "^5.12.0"
+mypy = "^1.3.0"
+flake8 = "^6.0.0"
+flake8-pyproject = "^1.2.3"
+pre-commit = "^3.3.1"
+pytest = "^7.3.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
